# smallStudyItem

./: README.md
library_code/: Makefile  Makefile.am  Makefile.in  build  config.status  configure  configure.ac
library_code/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
library_code/src_code/: Makefile  Makefile.am  Makefile.in  testFile
library_code/src_code/code/include/: cmdHandle.h  comm_list.h  common.h  core.h  fileUtils.h  ioUtils.h  lockUtils.h  logprint.h  modules.h  netUtils.h  pthreadUtils.h  sigUtils.h  stringUtils.h  timeUtils.h
library_code/src_code/code/src/common/: cmdHandle.c  errorHandle.c  fileUtils.c  ioUtils.c  ipcUtils.c  netUtils.c  pthreadUtils.c  sigUtils.c  stringUtils.c  timeUtils.c
library_code/src_code/code/src/common/.deps/: testtool-cmdHandle.Po  testtool-errorHandle.Po  testtool-fileUtils.Po  testtool-ioUtils.Po  testtool-ipcUtils.Po  testtool-lockUtils.Po  testtool-logprint.Po  testtool-netUtils.Po  testtool-pthreadUtils.Po  testtool-sigUtils.Po  testtool-timeUtils.Po
library_code/src_code/code/src/object/: modules.c  objectBus.c  objectFile.c  objectPublic.h
library_code/src_code/code/src/object/.deps/: testtool-modules.Po  testtool-object.Po  testtool-objectBus.Po  testtool-objectDev.Po  testtool-objectFile.Po  testtool-objectSocket.Po
library_code/src_code/test/: testMain.c
library_code/src_code/test/.deps/: testtool-testMain.Po
library_code_v2.0/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac
library_code_v2.0/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
library_code_v2.0/src_code/ae_lib/: Makefile  Makefile.am  Makefile.in
library_code_v2.0/src_code/ae_lib/.deps/: libae_a-ae.Po  libae_a-ae_epoll.Po  libae_a-anet.Po
library_code_v2.0/src_code/code/: .Makefile.am.swp  Makefile  Makefile.am  Makefile.in
library_code_v2.0/src_code/code/include/: cmdHandle.h  ioUtils.h  ipcUtils.h  logprint.h  mempool.h  object.h  pthreadPool.h  timer.h
library_code_v2.0/src_code/code/src/common/: cmdHandle.c  errorHandle.c  ioUtils.c  ipcUtils.c  lockUtils.c  logprint.c
library_code_v2.0/src_code/code/src/common/.deps/: libcode_a-cmdHandle.Po  libcode_a-errorHandle.Po  libcode_a-fileUtils.Po  libcode_a-ioUtils.Po  libcode_a-ipcUtils.Po  libcode_a-lockUtils.Po  libcode_a-logprint.Po  libcode_a-netUtils.Po  libcode_a-pthreadUtils.Po  libcode_a-sigUtils.Po  libcode_a-stringUtils.Po  libcode_a-timeUtils.Po  testtool-fileUtils.Po  testtool-logprint.Po  testtool-netUtils.Po  testtool-stringUtils.Po
library_code_v2.0/src_code/code/src/object/: mempool.c  object.c  objectDev.c  objectSocket.c  pthreadPool.c  timer.c
library_code_v2.0/src_code/code/src/object/.deps/: libcode_a-mempool.Po  libcode_a-modules.Po  libcode_a-object.Po  libcode_a-objectBus.Po  libcode_a-objectDev.Po  libcode_a-objectFile.Po  libcode_a-objectSocket.Po  libcode_a-pthreadPool.Po  libcode_a-timer.Po  testtool-object.Po  testtool-objectFile.Po
library_code_v2.0/src_code/libev/: Makefile  Makefile.am  Makefile.am_bkk  Makefile.in
library_code_v2.0/src_code/libev/.deps/: ev.Po  event.Po
library_code_v2.0/src_code/test/: Makefile  Makefile.am  Makefile.in
library_code_v2.0/src_code/test/.deps/: testtool-testMain.Po
